--- a/src/lunch.html
+++ b/src/lunch.html
@@ -7,10 +7,10 @@
   </head>
   <body>
     <div id="container">
-      <h1>Lunch menu</h1>
-      <div id="menu">
-
-      </div>
+      <h1>Sodexo</h1>
+      <div id="menu"></div>
+      <h1>Fazer</h1>
+      <div id="fazerMenu"></div>
       <div id="buttonGroup">
         <button id="vaihto">Change the language</button>
         <button id="random">Random dish</button>
