--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,13 @@
     <link rel="stylesheet" href="assets/styles.css">
   </head>
   <body>
-    <p>
-      Hello! Open the developer tools, please.<br />
-      Start by editing the files in <code>src/</code> folder.
-    </p>
+    <ul>
+      <li>first</li>
+      <li>second</li>
+      <li>third</li>
+      <li>4</li>
+      <li>5</li>
+      <li>6</li>
+    </ul>
   </body>
 </html>
