--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,7 @@
     <link rel="stylesheet" href="assets/styles.css">
   </head>
   <body>
-    <ul>
-      <li>first</li>
-      <li>second</li>
-      <li>third</li>
-      <li>4</li>
-      <li>5</li>
-      <li>6</li>
-    </ul>
+    <p id="output">
+    </p>
   </body>
 </html>
