--- a/src/index.html
+++ b/src/index.html
@@ -6,21 +6,24 @@
     <link rel="stylesheet" href="assets/styles.css">
   </head>
   <body>
-    <h1>Number guessing game</h1>
-
-    <p>We have selected a random number between 1 and 100. See if you can guess it in 10 turns or fewer. We'll tell you if your guess was too high or too low.</p>
-
-    <div class="form">
-      <label for="guessField">Enter a guess: </label>
-      <input type="text" id="guessField" class="guessField">
-      <input type="submit" value="Submit guess" class="guessSubmit">
+    <div id="container">
+      <div class="menuBox">
+        <h1>Sodexo</h1>
+        <div>
+          <ul id="sodexoMenu"></ul>
+        </div>
+      </div>
+      <div class="menuBox">
+        <h1>Fazer</h1>
+        <div>
+          <ul id="fazerMenu"></ul>
+        </div>
+      </div>
+      <div id="buttonGroup">
+        <button id="vaihto">Change the language</button>
+        <button id="random">Random dish</button>
+        <button id="sort">Sort</button>
+      </div>
     </div>
-
-    <div class="resultParas">
-      <p class="guesses"></p>
-      <p class="lastResult"></p>
-      <p class="lowOrHi"></p>
-    </div>
-
   </body>
 </html>
